<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">



    <TextView
        android:id="@+id/tv_departure_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/icon_date"
        android:gravity="center"
        android:text="@string/select"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/tv_arrival_date"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline_horizontal" />

    <TextView
        android:id="@+id/tv_arrival_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:drawableLeft="@drawable/icon_date"
        android:gravity="center"
        android:text="@string/select"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tv_departure_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_departure_date"
        app:layout_constraintTop_toTopOf="@+id/tv_departure_date" />

    <TextView
        android:id="@+id/tv_departure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/departure"
        app:layout_constraintBottom_toTopOf="@+id/tv_departure_date"
        app:layout_constraintStart_toStartOf="@+id/tv_departure_date" />

    <TextView
        android:id="@+id/tv_arrival"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/arrival"
        app:layout_constraintBottom_toTopOf="@+id/tv_arrival_date"
        app:layout_constraintStart_toStartOf="@+id/tv_arrival_date" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />


    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.53">

        <TableRow>

            <TextView
                android:id="@+id/tv_children_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="4dp"
                android:text="Children:"
                tools:layout_editor_absoluteX="230dp"
                tools:layout_editor_absoluteY="372dp" />

            <EditText
                android:id="@+id/tv_children"
                android:layout_width="68dp"
                android:layout_height="39dp"
                android:inputType="number"
                tools:layout_editor_absoluteX="292dp"
                tools:layout_editor_absoluteY="413dp" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/tv_adult_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="4dp"
                android:text="Adults:"
                tools:layout_editor_absoluteX="230dp"
                tools:layout_editor_absoluteY="372dp" />

            <EditText
                android:id="@+id/tv_adult"
                android:layout_width="68dp"
                android:layout_height="39dp"
                android:inputType="number"
                tools:layout_editor_absoluteX="292dp"
                tools:layout_editor_absoluteY="413dp" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/tv_elder_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="4dp"
                android:text="Elders:"
                tools:layout_editor_absoluteX="230dp"
                tools:layout_editor_absoluteY="372dp" />

            <EditText
                android:id="@+id/tv_elder"
                android:layout_width="68dp"
                android:layout_height="39dp"
                android:inputType="number"
                tools:layout_editor_absoluteX="292dp"
                tools:layout_editor_absoluteY="413dp" />
        </TableRow>

    </TableLayout>
    <Spinner
        android:id="@+id/spinner_travel_as"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:prompt="@string/select"
        app:layout_constraintBottom_toBottomOf="@+id/tv_travel_as"
        app:layout_constraintStart_toEndOf="@+id/tv_travel_as"
        app:layout_constraintTop_toTopOf="@+id/tv_travel_as" />

    <TextView
        android:id="@+id/tv_travel_as"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/travel_as"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_departure_date" />


    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.65" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="Membership:"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch1" />

    <Spinner
        android:id="@+id/spinner_membership"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textOff="@string/ptιsι_exoterikou"
        android:textOn="@string/ptisi_esoterikou"
        app:layout_constraintBottom_toBottomOf="@+id/tv_type_of_flight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_type_of_flight" />

    <TextView
        android:id="@+id/tv_type_of_flight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="44dp"
        android:text="@string/ptisi_esoterikou"
        app:layout_constraintStart_toEndOf="@+id/switch1"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <Button
        android:id="@+id/tv_proceed_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="Υπολογισμός"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/tv_departure"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/flight_home" />


</android.support.constraint.ConstraintLayout>